<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeerRightNow</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="signup">Sign Up</string>
    <string name="str_continue">CONTINUE</string>
    <string name="str_dob">Your Date of Birth</string>
    <string name="delivery_zipcode">What is your delivery zip code?</string>
    <string name="str_benifit">Get the benefit of 1-click ordering</string>
    <string name="str_cc_details">Enter your credit card details now!</string>
    <string name="str_entire_collection">Browse Entire Collection</string>
    <string name="str_website">beerrightnow.com</string>
    <string name="str_drink">Always drink responsibly and over the age  of 21.\nYou must be 21 or older to use this site.\nBy entering your zip code you confirm that you are of legal age.</string>
    <string name="str_order_process_text">Please do not close this app or switch view while the order is being processed...</string>
    <string name="str_sorryZip">We\'re sorry! We don\'t serve in thr Zipcode you entered! Is there any other place where you can get your delivery?</string>
    <string name="str_add_address">Enter the delivery address below\n(You can add more address later)</string>
    <string name="str_order_placed">Your order have been placed and your confirmation\nNumber is </string>
    <string name="str_take_pic">Take a Pic!</string>
    <string name="str_share_excitement">Share your excitement with friends!</string>
    <string name="str_invite_friends">Give BeerRightNow to your friends!</string>
    <string name="str_having_party">Having a Party? text to friends!</string>
    <string name="str_referal">Earn referal points with all these activities!</string>
    <string name="str_order_guy">Having this info helps our delivery guys to ensure your order reaches you quickly</string>
    
    
    <!-- apigee -->
    

    <string name="send_notification">Send myself a Notification</string>
    <string name="gcm_error">GCM error (%1$s).</string>
    <string name="gcm_recoverable_error">GCM recoverable error (%1$s).</string>
    <string name="gcm_deleted">GCM server deleted %1$d pending messages!</string>
    <string name="gcm_registered">Device Registered: (%1$s).</string>
    <string name="gcm_unregistered">Device Unregistered: (%1$s).</string>
    <string name="gcm_alert_title">Message</string>
    <string name="gcm_message">Message: (%1$s)</string>

    <!-- FACEBOOK -->
    <string name="app_id">934254516605708</string>

    <!-- added by tugsuupaak -->

    <string name="network_error">Please check your network connection.</string>
    <string name="unknown_error">unknown server error</string>
    <string name="no_proudcts_in_cart">"No Products in Cart..."</string>
    <string name="sort_by">Sort By</string>
    <string name="change_zip_alert">Changing zipcode will clear out your cart</string>
    <string name="all_fields_require">"All Fields are require to fill"</string>
    <string name="valid_email">Please input valid email</string>
    <string name="no_reviews">No reviews to display</string>
    <string name="fill_coupan">Please fill coupon code</string>
    <string name="invalide_coupon">Invalid coupon code</string>
    <string name="all_good">ALL GOOD,LET\'S SHOP!</string>
    <string name="happy_zip_code">Yay! We serve this zip code! :)</string>
    <string name="cheers">Cheers!</string>
    <string name="hic">Hic!</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="brands">Brands</string>
    <string name="producers">Producers</string>
    <string name="price">Price</string>
    <string name="type">Type</string>

</resources>