<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_white"
    android:orientation="vertical" >

    <HorizontalScrollView
        android:id="@+id/filterGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#292A25" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:text="Sort By"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/divider" />

            <Button
                android:id="@+id/brandsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:text="@string/brands"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/producersBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:text="@string/producers"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/priceBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:text="@string/price"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/typeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:text="@string/type"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:visibility="gone" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/searchGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/divider"
        android:orientation="vertical"
        android:paddingBottom="7dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="7dp" >

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/searchbok"
            android:gravity="center"
            android:hint="Search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="8dp" />
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <GridView
            android:id="@+id/gridProducts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:horizontalSpacing="1dp"
            android:numColumns="2"
            android:stretchMode="columnWidth"
            android:verticalSpacing="1dp" >
        </GridView>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>