<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header_signup" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtCheers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/cheers"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#00ff00" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/signup_background" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/edTxtZipCheck"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:editable="false"
                            android:textColor="#000000"
                            android:background="@drawable/edittext_back"
                            android:hint="Zip code"
                            android:inputType="textPersonName"
                            android:padding="10dp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:visibility="invisible" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtZipMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/happy_zip_code"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/txt_col" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_white"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:rotation="180"
            android:scaleType="center"
            android:src="@drawable/forward_arrow_red"
            android:visibility="gone" >
        </ImageView>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/txtContinue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/forward_arrow_red"
            android:gravity="center_vertical|right"
            android:padding="15dp"
            android:singleLine="true"
            android:text="@string/str_continue"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#c6383e"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>