<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header_signup" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:singleLine="true"
                android:text="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/txt_col" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:background="#cccccc"
                android:orientation="vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:singleLine="true"
                android:text="2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/txt_col" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:background="#cccccc"
                android:orientation="vertical" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dp"
                android:text="3  Confirm details"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ff0000" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/signup_background" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/txtFname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="FNAME"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtLname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:text="LNAME"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtAdress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="7dp"
                    android:text="address"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/txt_col" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/telephone"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/txt_col" />

                    <TextView
                        android:id="@+id/txtMail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:drawableLeft="@drawable/email"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/txt_col" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/rounded_rect"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="7dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="7dp"
                    android:visibility="invisible" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/info_red" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_benifit"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_cc_details"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_white"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:rotation="180"
            android:scaleType="center"
            android:src="@drawable/forward_arrow_red" >
        </ImageView>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/txtContinue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/forward_arrow_red"
            android:gravity="center_vertical|right"
            android:padding="15dp"
            android:singleLine="true"
            android:text="@string/all_good"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#c6383e"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>